force-app/main/default/objects/Order_Change__e/Order_Change__e.object-meta.xml
<CustomObject>
    <description>When a change occurs in an order</description>
    <label>Order Change</label>
    <pluralLabel>Order Change</pluralLabel>
</CustomObject>