force-app/main/default/objects/Order_Change__e/fields/OpportunityID__c.field-meta.xml
<CustomField>
    <fullName>OpportunityID__c</fullName>
    <label>OpportunityID</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>