force-app/main/default/objects/Order_Change__e/fields/OrderID__c.field-meta.xml
<CustomField>
    <fullName>OrderID__c</fullName>
    <label>OrderID</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>