force-app/main/default/objects/Order_Change__e/fields/OrderStatus__c.field-meta.xml
<CustomField>
    <fullName>OrderStatus__c</fullName>
    <label>OrderStatus</label>
    <length>255</length>
    <type>Text</type>
</CustomField>