force-app/main/default/objects/Order_Change__e/fields/OrderTotal__c.field-meta.xml
<CustomField>
    <fullName>OrderTotal__c</fullName>
    <description>Total amount of the order</description>
    <label>OrderTotal</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>